// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InvoiceLineInformation should display info invoice line connected to order line 1`] = `
<DocumentFragment>
  <div
    class="row"
  >
    <div
      class="col-xs-12"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.description
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          EDI import invoice line
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.poLineNumber
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          <a
            class="root"
            data-test-text-link="true"
            href="/orders/lines/view/2e5067cd-2dc8-4d99-900d-b4518bb6407f"
            rel="noopener noreferrer"
            target="_blank"
          >
            1000-7
          </a>
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.invoiceLineNumber
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          <span
            data-test-no-value="true"
          >
            <span
              class="sr-only"
            >
              stripes-components.noValue.noValueSet
            </span>
            <span
              aria-hidden="true"
            >
              -
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoice.details.information.status
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          Open
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.subscriptionInfo
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          <span
            data-test-no-value="true"
          >
            <span
              class="sr-only"
            >
              stripes-components.noValue.noValueSet
            </span>
            <span
              aria-hidden="true"
            >
              -
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.subscriptionStart
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          2021-06-09
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.subscriptionEnd
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          2021-06-18
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.comment
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          <span
            data-test-no-value="true"
          >
            <span
              class="sr-only"
            >
              stripes-components.noValue.noValueSet
            </span>
            <span
              aria-hidden="true"
            >
              -
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.accountNumber
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          <span
            data-test-no-value="true"
          >
            <span
              class="sr-only"
            >
              stripes-components.noValue.noValueSet
            </span>
            <span
              aria-hidden="true"
            >
              -
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoice.accountingCode
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          <span
            data-test-no-value="true"
          >
            <span
              class="sr-only"
            >
              stripes-components.noValue.noValueSet
            </span>
            <span
              aria-hidden="true"
            >
              -
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.quantity
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          20
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.subTotal
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          $1,523.00
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="checkbox disabled"
        data-test-checkbox="true"
      >
        <label
          class="label label"
          for="checkbox-1"
        >
          <span
            class="inner disabledLabel"
          >
            <input
              aria-invalid="false"
              class="input"
              disabled=""
              id="checkbox-1"
              type="checkbox"
              value=""
            />
            <span
              class="checkboxIcon"
            >
              <svg
                height="10"
                viewBox="0 0 14 14"
                width="10"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.395 4.617L5.63 9.383 3.605 7.358"
                  fill="none"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-miterlimit="10"
                  stroke-width="1.5"
                />
              </svg>
            </span>
            <span
              class="labelText"
            >
              ui-invoice.invoiceLine.releaseEncumbrance
            </span>
          </span>
        </label>
        <div
          role="alert"
        />
      </div>
    </div>
    <div
      class="col-xs-12"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.referenceNumbers
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          <div
            class="mclEmptyMessage"
            style="min-width: 200px;"
            tabindex="0"
          >
            stripes-components.tableEmpty
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InvoiceLineInformation should display info invoice line not connected to order line 1`] = `
<DocumentFragment>
  <div
    class="row"
  >
    <div
      class="col-xs-12"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.description
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          EDI import invoice line
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.poLineNumber
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          <span>
            -
          </span>
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.invoiceLineNumber
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          <span
            data-test-no-value="true"
          >
            <span
              class="sr-only"
            >
              stripes-components.noValue.noValueSet
            </span>
            <span
              aria-hidden="true"
            >
              -
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoice.details.information.status
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          Open
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.subscriptionInfo
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          <span
            data-test-no-value="true"
          >
            <span
              class="sr-only"
            >
              stripes-components.noValue.noValueSet
            </span>
            <span
              aria-hidden="true"
            >
              -
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.subscriptionStart
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          2021-06-09
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.subscriptionEnd
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          2021-06-18
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.comment
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          <span
            data-test-no-value="true"
          >
            <span
              class="sr-only"
            >
              stripes-components.noValue.noValueSet
            </span>
            <span
              aria-hidden="true"
            >
              -
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.accountNumber
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          <span
            data-test-no-value="true"
          >
            <span
              class="sr-only"
            >
              stripes-components.noValue.noValueSet
            </span>
            <span
              aria-hidden="true"
            >
              -
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoice.accountingCode
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          <span
            data-test-no-value="true"
          >
            <span
              class="sr-only"
            >
              stripes-components.noValue.noValueSet
            </span>
            <span
              aria-hidden="true"
            >
              -
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.quantity
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          20
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.subTotal
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          $1,523.00
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="checkbox disabled"
        data-test-checkbox="true"
      >
        <label
          class="label label"
          for="checkbox-2"
        >
          <span
            class="inner disabledLabel"
          >
            <input
              aria-invalid="false"
              class="input"
              disabled=""
              id="checkbox-2"
              type="checkbox"
              value=""
            />
            <span
              class="checkboxIcon"
            >
              <svg
                height="10"
                viewBox="0 0 14 14"
                width="10"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.395 4.617L5.63 9.383 3.605 7.358"
                  fill="none"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-miterlimit="10"
                  stroke-width="1.5"
                />
              </svg>
            </span>
            <span
              class="labelText"
            >
              ui-invoice.invoiceLine.releaseEncumbrance
            </span>
          </span>
        </label>
        <div
          role="alert"
        />
      </div>
    </div>
    <div
      class="col-xs-12"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.referenceNumbers
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          <div
            class="mclEmptyMessage"
            style="min-width: 200px;"
            tabindex="0"
          >
            stripes-components.tableEmpty
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
